rpi-router-skeleton/etc/iptables/rules.v4
# Generated by iptables-save v1.4.21 on Fri Jul 14 03:22:45 2017
*filter
:INPUT DROP [6:229]
:FORWARD DROP [0:0]
:OUTPUT DROP [11:1799]
-A FORWARD -m set --match-set blockedip src -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -i eth1 -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
-A INPUT -i eth1 -m set --match-set localaddr dst -j DROP
-A INPUT -i eth1 -p udp -m udp --dport 1900 -j DROP
-A FORWARD -m set --match-set blockedip dst -j DROP
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -i eth0 -s 192.168.0.0/255.255.255.0 -j ACCEPT
-A FORWARD -o eth0 -j ACCEPT
-A OUTPUT -d 192.168.100.0/24 -o eth1 -j ACCEPT
-A OUTPUT -o eth1 -m set --match-set localaddr dst -j DROP
-A OUTPUT -o eth0 -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -o eth1 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -o eth1 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Fri Jul 14 03:22:45 2017
# Generated by iptables-save v1.4.21 on Fri Jul 14 03:22:45 2017
*nat
:PREROUTING ACCEPT [435:76783]
:INPUT ACCEPT [107:6694]
:OUTPUT ACCEPT [103:7787]
:POSTROUTING ACCEPT [26:1694]
-A PREROUTING -i eth1 -p tcp -m tcp --dport 37777 -j DNAT --to-destination 192.168.0.101
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Fri Jul 14 03:22:45 2017
